Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-530

group qoutas not enforced

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.1.0, Lustre 1.8.7
    • Lustre 1.8.6
    • None
    • CentOS
    • 3
    • 24,154
    • 4930

      Group quotas on Lustre 1.8.4 and 1.8.6 (issue has only been tested with these two versions) are not enforced.
      A customer noticed, that user quotas are enforced, but group quotas are not (see BZ 24154).
      I tried to reproduce this issue with Lustre 1.8.6 and found the same problem.
      I've attached the script (create_test_lustre.sh) I used to verify the problem on a virtual machine.
      The output of the script (create_test_lustre.txt) and the quota stats (lquota.tar.gz) is attached as well.
      Is there something wrong with the way quotas are set up in this script or is this a real bug?

            niu Niu Yawei (Inactive)
            svtr Sven Trautmann (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: