LU-530 group quotas not enforced

In filter_quota_getflag(), we shouldn't break the loop when user quota not
enabled, otherwise, the group quota check will be skipped and the out of quota
flag will not be returned to client at the end.

Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: Ibf6f1fe3a550ce1f4b3d627fe24ca4484e754a41